# fastfix

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  xmake.lua
bench/: README.md  bench.sh  bench_support.h  fastfix_loopback.cpp  main.cpp  nimblefix_loopback.cpp  quickfix_loopback.cpp  quickfix_main.cpp  tcp_rtt.cpp  tls_transport.cpp
docs/: architecture.md  design.md  development.md  generated-first-api-redesign.md  public-api.md
examples/hello-fix/: CMakeLists.txt  acceptor.cpp  initiator.cpp  queue_handler.cpp
scripts/: offline_build.sh
src/codec/: compiled_decoder.cpp  fix_codec.cpp  raw_passthrough.cpp
src/message/: fixed_layout_writer.cpp  message.cpp  typed_message.cpp
src/profile/: artifact_builder.cpp  overlay.cpp  (+4 more)
tests/: admin_protocol_test.cpp  advanced_message_api_test.cpp  application_poller_test.cpp  application_queue_test.cpp  diagnostics_test.cpp  dictgen_test.cpp  dynamic_config_test.cpp  fix_codec_test.cpp  fix_session_testcases_test.cpp  gap_state_transition_test.cpp  ha_test.cpp  interop_harness_test.cpp  live_initiator_test.cpp  live_runtime_test.cpp  management_test.cpp  message_api_test.cpp  message_log_test.cpp  metrics_trace_test.cpp  normalized_dictionary_test.cpp  outbound_fragment_test.cpp  overlay_merge_test.cpp  profile_loader_test.cpp  raw_passthrough_test.cpp  router_test.cpp  runtime_config_test.cpp  session_core_test.cpp  session_key_test.cpp  session_schedule_test.cpp  soak_smoke_test.cpp  socket_loopback_test.cpp  store_recovery_test.cpp  typed_message_test.cpp  warmup_test.cpp  xml2ffd_test.cpp  xml2nfd_test.cpp
(+205 files in other folders)
